--- a/WEB I/Aula 2/Aula2_05.html
+++ b/WEB I/Aula 2/Aula2_05.html
@@ -8,12 +8,16 @@
             h2{
                 color: rgb(87, 0, 128);
             }
+            a{
+                color: rgb(87, 0, 128);
+                font-size: 1.5em;
+            }
         </style>
     </head>
     <body>
         <h1>Site 7a Arte</h1>
         <hr>
-        <h2><u>O Hobbit: Uma Jornada Inesperada</u></h2>
+        <a href="./Aula2_06.html"><b>O Hobbit: Uma Jornada Inesperada</b></a>
         <p>Na história de O Hobbit, trilogia que adapta a obra de J.R.R Tolkien, o mago Gandalf (Ian McKellen) e os 13 anões que formam sua companhia contratam Bilbo Bolseiro (Martin Freeman) para uma jornada até a Montanha Solitária, onde tentarão recuperar os pertences dos anões que foram roubados pelo dragão Smaug (voz de Benedict Cumberbatch). É nessa aventutra que Bilbo encontra o Um Anel que desencadeia a trilogia O Senhor dos Anéis.</p>
         <h2><u>X-Men - Primeira Classe</u></h2>
         <p>First Class acompanha o início épico da saga X-Men nos anos 1960 e revela uma história secreta de famosos eventos globais. Antes que os mutantes se revelassem ao mundo, e antes de Charles Xavier (James McAvoy) e Erik Lehnsherr (Michael Fassbender) adotarem os nomes Professor X e Magneto, eles eram dois jovens descobrindo seus poderes pela primeira vez.</p>
